feat(api): add custom exceptions handling, Stripe checkout creation, and complete endpoint controllers
- Implemented custom exception classes and centralized handling with @ControllerAdvice
- Fixed various bugs related to previous endpoint logic
- Added controllers for all existing endpoints
- Introduced new feature to create checkout sessions using Stripe API