@@ -6,13 +6,11 @@ import com.application.API_E_commerce.domain.category.Category;
 import com.application.API_E_commerce.domain.category.CategoryRepository;
 import com.application.API_E_commerce.utils.mappers.CategoryMapper;
 import com.application.API_E_commerce.utils.mappers.ProductMapper;
-import jakarta.persistence.EntityManager;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -21,11 +19,12 @@ import java.util.stream.Collectors;
 @Slf4j
 @Component
 public class CategoryRepositoryImplementation implements CategoryRepository {
+
   private final JpaCategoryRepository jpaCategoryRepository;
   private final ProductMapper productMapper;
   private final CategoryMapper categoryMapper;
 
-  public CategoryRepositoryImplementation(JpaCategoryRepository jpaCategoryRepository, ProductMapper productMapper, CategoryMapper categoryMapper) {
+  public CategoryRepositoryImplementation ( JpaCategoryRepository jpaCategoryRepository, ProductMapper productMapper, CategoryMapper categoryMapper ) {
     this.jpaCategoryRepository = jpaCategoryRepository;
     this.productMapper = productMapper;
     this.categoryMapper = categoryMapper;
@@ -33,11 +32,11 @@ public class CategoryRepositoryImplementation implements CategoryRepository {
 
   @Override
   @Transactional
-  public Category saveCategory(Category category) {
-    if (category.getId() != null) {
+  public Category saveCategory ( Category category ) {
+    if ( category.getId() != null ) {
       JpaCategoryEntity existingEntity = this.jpaCategoryRepository.findById(category.getId()).orElse(null);
 
-      if (existingEntity != null) {
+      if ( existingEntity != null ) {
         JpaCategoryEntity categoryEntityToSave = updateExistingEntity(existingEntity, category);
         JpaCategoryEntity categoryEntityToConvert = this.jpaCategoryRepository.save(categoryEntityToSave);
         return categoryMapper.toDomain(categoryEntityToConvert);
@@ -51,11 +50,11 @@ public class CategoryRepositoryImplementation implements CategoryRepository {
     return categoryMapper.toDomain(jpaCategoryEntityToConvert);
   }
 
-  private JpaCategoryEntity updateExistingEntity(JpaCategoryEntity existingEntity, Category category) {
+  private JpaCategoryEntity updateExistingEntity ( JpaCategoryEntity existingEntity, Category category ) {
     existingEntity.setName(category.getName());
     existingEntity.setDescription(category.getDescription());
 
-    if (category.getProducts() != null) {
+    if ( category.getProducts() != null ) {
       List<JpaProductEntity> productEntities = category.getProducts()
               .stream()
               .map(productMapper::toJpa)
@@ -71,19 +70,25 @@ public class CategoryRepositoryImplementation implements CategoryRepository {
 
   @Override
   @Transactional
-  public Optional<Category> findCategoryById(UUID categoryId) {
+  public Optional<Category> findCategoryById ( UUID categoryId ) {
     return Optional.ofNullable(this.jpaCategoryRepository.findById(categoryId)
             .map(categoryMapper::toDomain)
             .orElseThrow(() -> new IllegalArgumentException("Category was not found when searching for id in the repository.")));
   }
 
   @Override
-  public List<Category> findAllCategories() {
-    return List.of();
+  public List<Category> findAllCategories () {
+    if ( this.jpaCategoryRepository.findAll().isEmpty() ) return Collections.emptyList();
+
+    return this.jpaCategoryRepository.findAll().stream().map(categoryMapper::toDomain).toList();
   }
 
   @Override
-  public void deleteCategoryById(UUID categoryId) {
-
+  public void deleteCategoryById ( UUID categoryId ) {
+    jpaCategoryRepository.findById(categoryId).map(existingCategory -> {
+      jpaCategoryRepository.deleteById(categoryId);
+      return existingCategory;
+    }).orElseThrow(() -> new IllegalArgumentException("Category cannot be null."));
   }
+
 }
